--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./stylesheets/all.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
 </head>
-<body class="vsc-initialized">
+<body>
   <div class="d-flex">
     <aside class="sidebar vh-100 border-end d-flex bg-white flex-column pt-3" >
       <div class="px-4">
@@ -57,7 +57,7 @@
     </aside>
     <main class="main">
       <div class="bg-white w-100 border-bottom sticky-top">
-        <a href="#" class="py-3 px-4 border-end" id="toggle-btn">
+        <a href="#" class="py-3 px-4 border-end d-inline-block" id="toggle-btn">
           <i class="bi bi-arrows-angle-expand"></i>
         </a>
       </div>
@@ -92,7 +92,7 @@
         </div>
 
         <div class="row g-4 mb-4">
-          <div class="col-4">
+          <div class="col-lg-4">
             <div class="card shadow-sm h-100">
               <div class="card-body">
                 <canvas id="pie-chart" class="img-fluid"></canvas>
