--- a/order.html
+++ b/order.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./stylesheets/all.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
 </head>
-<body class="vsc-initialized">
+<body>
   <div class="d-flex">
     <aside class="sidebar vh-100 border-end d-flex bg-white flex-column pt-3" >
       <div class="px-4">
@@ -100,66 +100,69 @@
                 購買品項
               </div>
               <div class="card-body p-0">
-                <table class="table table-hover mb-0 text-nowrap align-middle w-100"
-                style="font-size: 14px;">
-                  <thead class="bg-light">
-                    <tr>
-                      <th scope="col" class="ps-4 py-3 border-0"></th>
-                      <th scope="col" class="py-3 border-0">貨號</th>
-                      <th scope="col" class="py-3 border-0">商品名稱</th>
-                      <th scope="col" class="py-3 border-0">購買價格</th>
-                      <th scope="col" class="py-3 border-0">訂購數量</th>
-                      <th scope="col" class="py-3 border-0">出貨狀態</th>
-                      <th scope="col" class="py-3 pe-3 border-0">編輯</th>
-                    </tr>
-                  </thead>
-                  <tbody class="text-nowrap">
-                    <tr class="align-middle">
-                      <td class="ps-4"><input type="checkbox"  class="form-check-input"></td>
-                      <td scope="row">P123456789</td>
-                      <td>無敵大麥克全家餐</td>
-                      <td>900</td>
-                      <td>1</td>
-                      <td class="text-muted">尚未處理</td>
-                      <td class="text-center pe-3">
-                        <div class="btn-group">
-                          <button class="btn btn-outline-dark btn-sm dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            編輯
-                          </button>
-                          <ul class="dropdown-menu">
-                            <li><a href="#" class="dropdown-item">尚未處理</a></li>
-                            <li><a href="#" class="dropdown-item">已出貨</a></li>
-                            <li><a href="#" class="dropdown-item">已取貨</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a href="#" class="dropdown-item text-danger">刪除品項</a></li>
-                          </ul>
-                        </div>
-                      </td>
-                    </tr>
-                    <tr class="align-middle">
-                      <td class="ps-4"><input type="checkbox"  class="form-check-input"></td>
-                      <td scope="row">P123456789</td>
-                      <td>無敵大麥克全家餐</td>
-                      <td>900</td>
-                      <td>1</td>
-                      <td class="text-muted">尚未處理</td>
-                      <td class="text-center pe-3">
-                        <div class="btn-group">
-                          <button class="btn btn-outline-dark btn-sm dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            編輯
-                          </button>
-                          <ul class="dropdown-menu">
-                            <li><a href="#" class="dropdown-item">尚未處理</a></li>
-                            <li><a href="#" class="dropdown-item">已出貨</a></li>
-                            <li><a href="#" class="dropdown-item">已取貨</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a href="#" class="dropdown-item text-danger">刪除品項</a></li>
-                          </ul>
-                        </div>
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
+                <div class="table-responsive">
+                  <table class="table table-hover mb-0 text-nowrap align-middle w-100"
+                  style="font-size: 14px;">
+                    <thead class="bg-light">
+                      <tr>
+                        <th scope="col" class="ps-4 py-3 border-0"></th>
+                        <th scope="col" class="py-3 border-0">貨號</th>
+                        <th scope="col" class="py-3 border-0">商品名稱</th>
+                        <th scope="col" class="py-3 border-0">購買價格</th>
+                        <th scope="col" class="py-3 border-0">訂購數量</th>
+                        <th scope="col" class="py-3 border-0">出貨狀態</th>
+                        <th scope="col" class="py-3 pe-3 border-0">編輯</th>
+                      </tr>
+                    </thead>
+                    <tbody class="text-nowrap">
+                      <tr class="align-middle">
+                        <td class="ps-4"><input type="checkbox"  class="form-check-input"></td>
+                        <td scope="row">P123456789</td>
+                        <td>無敵大麥克全家餐</td>
+                        <td>900</td>
+                        <td>1</td>
+                        <td class="text-muted">尚未處理</td>
+                        <td class="text-center pe-3">
+                          <div class="btn-group">
+                            <button class="btn btn-outline-dark btn-sm dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                              編輯
+                            </button>
+                            <ul class="dropdown-menu">
+                              <li><a href="#" class="dropdown-item">尚未處理</a></li>
+                              <li><a href="#" class="dropdown-item">已出貨</a></li>
+                              <li><a href="#" class="dropdown-item">已取貨</a></li>
+                              <li><hr class="dropdown-divider"></li>
+                              <li><a href="#" class="dropdown-item text-danger">刪除品項</a></li>
+                            </ul>
+                          </div>
+                        </td>
+                      </tr>
+                      <tr class="align-middle">
+                        <td class="ps-4"><input type="checkbox"  class="form-check-input"></td>
+                        <td scope="row">P123456789</td>
+                        <td>無敵大麥克全家餐</td>
+                        <td>900</td>
+                        <td>1</td>
+                        <td class="text-muted">尚未處理</td>
+                        <td class="text-center pe-3">
+                          <div class="btn-group">
+                            <button class="btn btn-outline-dark btn-sm dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                              編輯
+                            </button>
+                            <ul class="dropdown-menu">
+                              <li><a href="#" class="dropdown-item">尚未處理</a></li>
+                              <li><a href="#" class="dropdown-item">已出貨</a></li>
+                              <li><a href="#" class="dropdown-item">已取貨</a></li>
+                              <li><hr class="dropdown-divider"></li>
+                              <li><a href="#" class="dropdown-item text-danger">刪除品項</a></li>
+                            </ul>
+                          </div>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+
                 <div class="px-4 py-3">
                   <div class="btn-group">
                     <button class="btn btn-outline-dark btn-sm dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
