--- a/orders.html
+++ b/orders.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./stylesheets/all.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
 </head>
-<body class="vsc-initialized">
+<body>
   <div class="d-flex">
     <aside class="sidebar vh-100 border-end d-flex bg-white flex-column pt-3" >
       <div class="px-4">
